--- a/UserSecurityManager/pom.xml
+++ b/UserSecurityManager/pom.xml
@@ -23,6 +23,12 @@
 	    <version>6.0</version>
 	    <scope>provided</scope>
 	</dependency>
+	<dependency>
+		<groupId>mysql</groupId>
+		<artifactId>mysql-connector-java</artifactId>
+		<version>5.1.26</version>
+	</dependency>
+            
   </dependencies>
   <build>
     <finalName>UserSecurityManager</finalName>
