--- a/UserSecurityManager/pom.xml
+++ b/UserSecurityManager/pom.xml
@@ -33,6 +33,12 @@
 		<artifactId>postgresql</artifactId>
 		<version>9.1-901.jdbc4</version>
 	</dependency>
+	<dependency>
+		<groupId>org.codehaus.jackson</groupId>
+		<artifactId>jackson-mapper-asl</artifactId>
+		<version>1.9.13</version>
+	</dependency>
+	            
             
             
   </dependencies>
